# kwin

./: CMakeLists.txt  abstract_client.cpp  abstract_client.h  config-kwin.h.cmake  effects.cpp  input.cpp  main_wayland.cpp  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h  wayland_server.cpp
autotests/integration/: kwin_wayland_test.cpp
kcmkwin/kwinrules/: kcmrules.cpp
kcmkwin/kwinrules/package/contents/ui/: RulesEditor.qml
libkwineffects/: kwineffects.h
plugins/colord-integration/: colordintegration.cpp  colordintegration.h  main.cpp
plugins/screencast/: CMakeLists.txt  main.cpp  screencastmanager.cpp  screencastmanager.h
